<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" 
    android:background="#4a4a49">

    <EditText
        android:id="@+id/editText1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:ems="10"
        android:gravity="center"
        android:hint="@string/txtUserName"
        android:inputType="text"
        android:textColor="#ffffff"
        android:background="@drawable/custom_underline" android:layout_below="@+id/textTitle"
        android:labelFor="Username/email"/>

    <EditText
        android:id="@+id/editText2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/editText1"
        android:layout_below="@+id/editText1"
        android:layout_marginTop="19dp"
        android:ems="10"
        android:gravity="center"
        android:hint="@string/txtPassword"
        android:inputType="text"
        android:textColor="#ffffff"
        android:textColorLink="#e25a10"
        android:background="@drawable/custom_underline" />

    <Button
        android:id="@+id/btnSignIn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/editText2"
        android:layout_alignRight="@+id/editText2"
        android:layout_below="@+id/editText2"
        android:background="#e25a10"
        android:layout_marginTop="18dp"
        android:text="@string/btnSignIn"
        android:textColor="#ffffff" />

    <Button
        android:id="@+id/btnRegister"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/btnSignIn"
        android:layout_alignRight="@+id/btnSignIn"
        android:layout_below="@+id/btnSignIn"
        android:background="#e25a10"
        android:layout_marginTop="20dp"
        android:text="@string/btnRegister"
        android:textColor="#ffffff" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_alignLeft="@+id/btnRegister"
        android:layout_below="@+id/btnRegister"
        android:layout_marginTop="28dp"
        android:ems="10"
        android:text="@string/btnForgotPassword"
        android:textColor="#ffffff" />

    <TextView
        android:id="@+id/textTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="40dp"
        android:paddingLeft="10dip"
        android:paddingRight="10dip"
        android:paddingTop="10dip"
        android:text="@string/txtTitle"
        android:textColor="#4a4a49"
        android:textSize="25sp" />

    <ImageView
        android:id="@+id/imageView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/editText1"
        android:layout_centerHorizontal="true"
        android:adjustViewBounds="false"
        android:padding="12dp"
        android:src="@drawable/seiersberg" />

</RelativeLayout>