<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:background="#4a4a49">>
        <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
                     android:id="@+id/fragment_container"
                     android:layout_width="match_parent"
                     android:layout_height="match_parent" android:layout_alignParentTop="true"
                     android:layout_alignParentStart="true"/>
                <EditText
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:ems="10"
                        android:text="@string/btnForgotPassword"
                        android:textColor="#ffffff"  android:id="@+id/editText5"
                        android:layout_gravity="center_horizontal|bottom" android:layout_alignParentBottom="true"
                        android:layout_alignStart="@+id/editText1" android:layout_marginBottom="85dp"
                        android:visibility="invisible"/>


                <EditText
                        android:id="@+id/editText1"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:ems="10"
                        android:gravity="center"
                        android:hint="@string/txtUserName"
                        android:inputType="text"
                        android:textColor="#ffffff"
                        android:background="@drawable/custom_underline"
                        android:layout_marginBottom="37dp" android:layout_above="@+id/editText2"
                        android:layout_centerHorizontal="true"/>

                <EditText
                        android:id="@+id/editText2"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:ems="10"
                        android:gravity="center"
                        android:hint="@string/txtPassword"
                        android:inputType="text"
                        android:textColor="#ffffff"
                        android:textColorLink="#e25a10"
                        android:background="@drawable/custom_underline"  android:layout_marginBottom="38dp"
                        android:layout_above="@+id/btnSignIn" android:layout_alignStart="@+id/btnSignIn"/>

                <Button
                        android:id="@+id/btnSignIn"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:background="#e25a10"
                        android:text="@string/btnSignIn"
                        android:textColor="#ffffff" android:layout_centerVertical="true"
                        android:layout_alignStart="@+id/btnRegister" android:layout_alignEnd="@+id/btnRegister"/>

                <Button
                        android:id="@+id/btnRegister"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:background="#e25a10"
                        android:text="@string/btnRegister"
                        android:textColor="#ffffff" android:layout_above="@+id/editText5"
                        android:layout_alignStart="@+id/editText5" android:layout_marginBottom="34dp"
                        android:layout_alignEnd="@+id/editText5"/>

        <TextView
                        android:id="@+id/textTitle"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentTop="true"
                        android:layout_centerHorizontal="true"
                        android:layout_marginTop="40dp"
                        android:paddingLeft="10dip"
                        android:paddingRight="10dip"
                        android:paddingTop="10dip"
                        android:text="@string/txtTitle"
                        android:textColor="#4a4a49"
                        android:textSize="25sp" />

                <ImageView
                        android:id="@+id/imageView1"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:adjustViewBounds="false"
                        android:padding="12dp"
                        android:src="@drawable/seiersberg"
                        android:layout_toEndOf="@+id/editText1" android:layout_alignBottom="@+id/textTitle"
                        android:layout_alignParentStart="true"/>


</RelativeLayout>
