<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
                                        xmlns:tools="http://schemas.android.com/tools"
                                        android:id="@+id/drawer_layout"
                                        android:layout_width="match_parent"
                                        android:layout_height="match_parent"
                                        tools:context="com.example.seierfriendapp.MainActivity"
                                        xmlns:app="http://schemas.android.com/apk/res/com.example.seierfriendapp">
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:background="#4a4a49">>
    <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
                 android:id="@+id/fragment_container"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent" android:layout_alignParentTop="true"
                 android:layout_alignParentStart="true"/>
    <TextView
            android:id="@+id/txtPointsHeading"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="26dp"
            android:text="@string/txtPointsHeading"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textStyle="bold"
            />

    <com.pascalwelsch.holocircularprogressbar.HoloCircularProgressBar
            android:id="@+id/holoCircularProgressBar"
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:layout_below="@+id/txtPointsHeading"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="24dp"
            app:progress="0.6"
            app:progress_color="#f39c12" />

    <TextView
            android:id="@+id/txtCurrentPoints"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="140dp"
            android:text="@string/txtCurrentPoints"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textStyle="bold|italic"
            android:textSize="40sp"
            android:textColor="#fff"
            />
    <TextView
            android:id="@+id/txtPointsLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="190dp"
            android:text="@string/txtPointsLabel"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textStyle="normal"
            android:textSize="22sp"
            />

    <TextView
            android:id="@+id/txtFriendStatusLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="300dp"
            android:text="@string/txtFriendStatusLabel"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textSize="20sp"
            android:textStyle="normal"
            />
    <TextView
            android:id="@+id/txtFriendStatus"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="330dp"
            android:text="@string/txtFriendStatus"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textSize="38sp"
            android:textStyle="bold"
            />

</RelativeLayout>
</android.support.v4.widget.DrawerLayout>